--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <link rel="stylesheet/less" type="text/css" href="styles.less" />
+    <link href="https://fonts.googleapis.com/css?family=Dokdo" rel="stylesheet">
+    <link rel="stylesheet/less" type="text/css" href="css/index.css" /><link href="css/index.css" rel="stylesheet">
 
     <title>BadMouse</title>
 </head>
 <body>
+    <div class="container">
+        <header class="container-nav">
+            <nav>
     
+            </nav>
+        </header>
+        <section class="main-content">
+            <div class="btn">
+                <h1>Click here for the BadMouse</h1>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
