start js to move mouse

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     
             </nav>
         </header>
-        <section class="main-content">
+        <section class="main-content" onclick="showCoords(event)">
             <div class="btn">
                 <h1>Click here for the BadMouse</h1>
             </div>
         </section>
     </div>
+    <p class="results"></p>
+    <script src="myscripts.js"></script>
 </body>
 </html>
